--- a/SourceCode/Android/Zpotdrop/app/src/main/res/layout/activity_forgot_password.xml
+++ b/SourceCode/Android/Zpotdrop/app/src/main/res/layout/activity_forgot_password.xml
@@ -26,7 +26,7 @@
                 android:layout_margin="@dimen/margin_normal"
                 android:src="@drawable/logo" />
 
-            <TextView
+            <com.zpotdrop.view.BoldTextView
                 android:id="@+id/tv_forgot_password"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -36,7 +36,7 @@
                 android:textColor="@color/text_gray"
                 android:textSize="@dimen/text_size_bold" />
 
-            <EditText
+            <com.zpotdrop.view.LightEditText
                 android:id="@+id/edt_email"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -48,7 +48,7 @@
                 android:inputType="textEmailAddress"
                 android:textColor="@color/text_gray" />
 
-            <TextView
+            <com.zpotdrop.view.BoldTextView
                 android:id="@+id/tv_send"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -60,7 +60,7 @@
         </LinearLayout>
     </ScrollView>
 
-    <TextView
+    <com.zpotdrop.view.LightTextView
         android:id="@+id/tv_back"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
