--- a/SourceCode/Android/Zpotdrop/app/src/main/res/layout/activity_register.xml
+++ b/SourceCode/Android/Zpotdrop/app/src/main/res/layout/activity_register.xml
@@ -26,7 +26,7 @@
                 android:layout_margin="@dimen/margin_normal"
                 android:src="@drawable/logo" />
 
-            <EditText
+            <com.zpotdrop.view.LightEditText
                 android:id="@+id/edt_email"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -38,7 +38,7 @@
                 android:inputType="textEmailAddress"
                 android:textColor="@color/text_gray" />
 
-            <EditText
+            <com.zpotdrop.view.LightEditText
                 android:id="@+id/edt_password"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -50,7 +50,7 @@
                 android:inputType="textPassword"
                 android:textColor="@color/text_gray" />
 
-            <EditText
+            <com.zpotdrop.view.LightEditText
                 android:id="@+id/edt_password_again"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -62,7 +62,7 @@
                 android:inputType="textPassword"
                 android:textColor="@color/text_gray" />
 
-            <TextView
+            <com.zpotdrop.view.BoldTextView
                 android:id="@+id/tv_continue"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -76,7 +76,7 @@
 
     </ScrollView>
 
-    <TextView
+    <com.zpotdrop.view.LightTextView
         android:id="@+id/tv_back"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
