--- a/SourceCode/Android/Zpotdrop/app/src/main/res/layout/activity_register_more_info.xml
+++ b/SourceCode/Android/Zpotdrop/app/src/main/res/layout/activity_register_more_info.xml
@@ -26,7 +26,7 @@
                 android:layout_margin="@dimen/margin_normal"
                 android:src="@drawable/logo" />
 
-            <EditText
+            <com.zpotdrop.view.LightEditText
                 android:id="@+id/edt_first_name"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -38,7 +38,7 @@
                 android:inputType="textCapWords"
                 android:textColor="@color/text_gray" />
 
-            <EditText
+            <com.zpotdrop.view.LightEditText
                 android:id="@+id/edt_last_name"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -50,7 +50,7 @@
                 android:inputType="textCapWords"
                 android:textColor="@color/text_gray" />
 
-            <EditText
+            <com.zpotdrop.view.LightEditText
                 android:id="@+id/edt_phone_number"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -62,7 +62,7 @@
                 android:inputType="phone"
                 android:textColor="@color/text_gray" />
 
-            <EditText
+            <com.zpotdrop.view.LightEditText
                 android:id="@+id/edt_dob"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -93,7 +93,7 @@
                 android:layout_marginRight="@dimen/margin_to_border_normal"
                 android:layout_marginTop="@dimen/margin_normal"></com.zpotdrop.view.MultiStateToggleButton>
 
-            <TextView
+            <com.zpotdrop.view.BoldTextView
                 android:id="@+id/tv_sign_up"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -107,7 +107,7 @@
 
     </ScrollView>
 
-    <TextView
+    <com.zpotdrop.view.LightTextView
         android:id="@+id/tv_back"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
