--- a/SourceCode/Android/Zpotdrop/app/src/main/res/layout/fragment_find.xml
+++ b/SourceCode/Android/Zpotdrop/app/src/main/res/layout/fragment_find.xml
@@ -13,7 +13,7 @@
         android:layout_height="wrap_content"
         android:orientation="horizontal">
 
-        <EditText
+        <com.zpotdrop.view.LightEditText
             android:id="@+id/edt_search"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -48,7 +48,7 @@
             android:background="@color/text_gray"
             android:orientation="horizontal">
 
-            <TextView
+            <com.zpotdrop.view.BoldTextView
                 android:id="@+id/tv_here"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
@@ -59,7 +59,7 @@
                 android:text="@string/here"
                 android:textSize="@dimen/text_size_bold" />
 
-            <TextView
+            <com.zpotdrop.view.LightTextView
                 android:id="@+id/tv_there"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
@@ -73,7 +73,7 @@
 
         </LinearLayout>
 
-        <TextView
+        <com.zpotdrop.view.BoldTextView
             android:id="@+id/tv_scan"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
